--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /********** Template CSS **********/
 :root {
-    --primary: #32C36C;
+    --primary: #F68535;
     --light: #F6F7F8;
     --dark: #1A2A36;
 }
